# firefox-translations-models

./: .arcconfig  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  registry.json
.circleci/: config.yml
enes/: lex.enes.s2t  model.enes.npz
esen/: lex.esen.s2t  model.esen.npz  vocab.esen.spm
evals/: Dockerfile  README.md  requirements.in  requirements.txt
evals/data/: flores.sh
evals/eval/: bleu-results.md  clean-cache.sh  comet-results.md  eval-comet.sh  eval-custom-comet.sh  eval-custom.sh  eval.sh  evaluate.py
evals/install/: install-bergamot-translator.sh
evals/translators/: argos.py  bergamot.config.yml  bergamot.sh  google_translate.py  microsoft.py  nllb.py  opusmt.py
evaluation/: bleu-results.json  bleu-results.md  comet-results.json  comet-results.md  update.sh
evaluation/af-en/: flores-dev.google.en  flores-dev.google.en.comet  flores-dev.microsoft.en  flores-dev.microsoft.en.comet  flores-dev.nllb.en  flores-dev.nllb.en.comet  flores-dev.opusmt.en  flores-test.google.en  flores-test.microsoft.en  flores-test.nllb.en  flores-test.nllb.en.comet  flores-test.opusmt.en  flores-test.opusmt.en.bleu
evaluation/am-en/: flores-dev.google.en  flores-dev.microsoft.en  flores-dev.nllb.en  flores-test.google.en  flores-test.google.en.bleu  flores-test.microsoft.en  flores-test.nllb.en
evaluation/ar-en/: flores-dev.argos.en  flores-dev.bergamot-base-memory.en  flores-dev.bergamot-base-memory.en.comet  flores-dev.bergamot-base.en  flores-dev.bergamot-base.en.comet  flores-dev.google.en  flores-dev.microsoft.en  flores-dev.nllb.en  flores-dev.opusmt.en  flores-test.argos.en  flores-test.argos.en.comet  flores-test.bergamot-base-memory.en  flores-test.bergamot-base-memory.en.comet  flores-test.bergamot-base.en  flores-test.google.en  flores-test.microsoft.en  flores-test.nllb.en  iwslt17.ar  iwslt17.argos.en  iwslt17.bergamot-base-memory.en  iwslt17.bergamot-base.en  iwslt17.bergamot-base.en.comet  iwslt17.google.en  iwslt17.microsoft.en  iwslt17.opusmt.en
evaluation/az-en/: flores-dev.argos.en  flores-dev.argos.en.comet  flores-dev.bergamot-tiny.en  flores-dev.bergamot.en.bleu  flores-dev.google.en  (+14 more)
models/: by-hash.json
remote-settings/: client.py  create.py  format.py  remote-settings.py  test-create.py
remote_settings/: README.md  __main__.py  client.py  common.py  format.py
scripts/: eval.sh  find-bleu.py  find-comet.py  find-cometcompare.py  generate-registry.py  import-hplt.sh  import-statmt.sh  pull_models.py  pull_models.sh  release.sh  update-metadata.py  update-results.sh  upload.sh
(+4645 files in other folders)
